--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,100 @@
   /* fonte */
   --overskrift: 'rig-shaded-medium-face', sans-serif; /* overskrifter */
   --brødtekst: 'franklin-gothic-urw', sans-serif; /* brødtekst */
+
+  /* whitespace */
+  --whitespace: .5rem;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+/* Smooth scroll */
+html {
+  scroll-behavior: smooth;
+}
+
+/* Wrap */
+#wrap {
+  min-height: 100vh;
+  margin: auto;
+}
+
+/* Typography */
+h1 {
+  font-family: var(--overskrift);
+  color: var(--black);
+  margin-top: var(--whitespace);
+  margin-bottom: var(--whitespace);
+}
+
+p {
+  font-family: var(--brødtekst);
+  color: var(--black);
+  margin-top: var(--whitespace);
+  margin-bottom: var(--whitespace);
+}
+
+/* Billeder */
+img {
+  width: 100%;
+}
+
+/* FORSIDE - header */
+header {
+  position: relative;
+  width: 100%;
+  max-width: 400px; /* MOBIL */
+  background: var(--offwhite);
+  padding-bottom: 5%; /* MOBIL */
+}
+
+header img {
+  margin-bottom: 5%; /* MOBIL */
+}
+
+header .btn1 {
+  position: absolute;
+  top: 40%; /* MOBIL */
+  left: 50%; /* MOBIL */
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  background-color: var(--green);
+  color: var(--white);
+  font-family: var(--overskrift);
+  font-size: 18px; /* MOBIL */
+  padding: 12px 35px;
+  padding-top: 16px;
+  border: none;
+  cursor: pointer;
+  border-radius: 60px;
+  text-align: center;
+}
+
+header h2 {
+  position: absolute;
+  top: 20%; /* MOBIL */
+  text-align: center;
+  font-family: var(--brødtekst);
+  color: var(--black);
 }
 
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  /* Typography */
+  h1 {
+    font-size: 1.4em;
+    text-align: center;
+    /* max-width: 15ch; */
+  }
+  p {
+    font-size: 1.4em;
+    text-align: center;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
