--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,19 @@ h1 {
   margin-top: var(--whitespace);
   margin-bottom: var(--whitespace);
 }
-
+h3 {
+  font-family: var(--overskrift);
+  color: var(--black);
+  margin-top: var(--whitespace);
+  margin-bottom: var(--whitespace);
+}
+h4 {
+  font-family: var(--overskrift);
+  font-size: 90%;
+  color: var(--black);
+  margin-top: var(--whitespace);
+  margin-bottom: var(--whitespace);
+}
 p {
   font-family: var(--brødtekst);
   color: var(--black);
@@ -106,12 +118,41 @@ header h2 {
   padding-top: 25px;
 }
 
-#kategorier .btn1 {
-  width:50%;
-  margin-left:25%;
-  margin-right:25%;
+/* Boks med tekst ovenpå billede */
+div.boks1 {
+  width: 90%;
+  height: 300px;
+  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
+  padding: 50px;
+  margin: 20px;
+  position: absolute;
+  top: 91%; /* MOBIL */
 }
 
+div.boks2 {
+  width: 90%;
+  height: 300px;
+  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
+  padding: 50px;
+  margin: 20px;
+  position: absolute;
+  top: 136.5%; /* MOBIL */
+}
+
+div.boks3 {
+  width: 90%;
+  height: 300px;
+  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
+  padding: 50px;
+  margin: 20px;
+  position: absolute;
+  top: 182%; /* MOBIL */
+}
+
+/* Solid divider: https://www.w3schools.com/howto/howto_css_dividers.asp */
+hr.solid {
+  border-top: 2px solid var(--black);
+}
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
