--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ html {
 body {
   background-image: var(--baggrund);
   background-size:100% auto;
-  background-color: var(--white);
+  background-color: var(--beige);
   font-family: var(--font);
 }
 
@@ -86,7 +86,6 @@ img {
 header {
   position: relative;
   width: 100%;
-  max-width: 400px; /* MOBIL */
   background: var(--offwhite);
   padding-bottom: 5%;
 }
@@ -95,14 +94,11 @@ header img {
 }
 header .btn {
   position: absolute;
-  top: 40%; /* MOBIL */
-  left: 50%; /* MOBIL */
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: var(--green);
   color: var(--white);
   font-family: var(--overskrift);
-  font-size: 18px; /* MOBIL */
   padding: 12px 35px;
   padding-top: 16px;
   border: none;
@@ -112,7 +108,6 @@ header .btn {
 }
 header h2 {
   position: absolute;
-  top: 20%; /* MOBIL */
   text-align: center;
   font-family: var(--brødtekst);
   color: var(--black);
@@ -157,38 +152,6 @@ div.omos {
   margin-top: 25px;
 }
 
-/* GAMLE Boks med tekst ovenpå billede */
-/*#kategorier img {
-  padding-top: 25px;
-}*/
- /*div.boks1 {
-  width: 90%;
-  height: 300px;
-  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
-  /* padding: 50px;
-  margin: 20px;
-  position: absolute;
-  top: 91%; /* MOBIL */
-/* }
-div.boks2 {
-  width: 90%;
-  height: 300px;
-  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
-/*  padding: 50px;
-  margin: 20px;
-  position: absolute;
-  top: 136.5%; /* MOBIL */
-/*}
-div.boks3 {
-  width: 90%;
-  height: 300px;
-  background: rgba(234, 230, 227, 0.6); /* offwhite baggrund med 60% opacity */
-/*  padding: 50px;
-  margin: 20px;
-  position: absolute;
-  top: 182%; /* MOBIL */
-/*}*/
-
 /* Solid divider: https://www.w3schools.com/howto/howto_css_dividers.asp */
 hr.solid {
   border-top: 2px solid var(--black);
@@ -201,24 +164,18 @@ hr.solid {
 /* shop tekst*/
 .shop h4 {
   position: absolute;
-  top: 231%; /* MOBIL */
-  left: 37%; /* MOBIL */
 }
 .shop p {
   position: absolute;
-  top: 235%; /* MOBIL */
 }
 /*shop knap*/
 .btn2 {
   position: absolute;
-  top: 248%; /* MOBIL */
-  left: 50%; /* MOBIL */
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: var(--green);
   color: var(--white);
   font-family: var(--overskrift);
-  font-size: 18px; /* MOBIL */
   padding: 12px 52px;
   padding-top: 16px;
   border: none;
@@ -256,7 +213,7 @@ hr.solid {
   width: 23%;
 }
 
-/* Extra small devices (phones, 600px and down) */
+/* Extra small devices (phones, 600px and down) - Iphone X */
 @media only screen and (max-width: 600px) {
   /* Typography */
   h1 {
@@ -282,10 +239,41 @@ hr.solid {
     top: 20%;
   }
   /* inspiration galleri */
-  .inspirationgalleri img{
-    width: 45%;
+  /* shop tekst*/
+  .shop h4 {
+    top: 231%;
+    left: 37%;
+  }
+  .shop p {
+    top: 235%;
+  }
+  /*shop knap*/
+  .btn2 {
+    top: 248%;
+    left: 50%;
+    font-size: 18px;
+  }
+  /* sociale medie ikoner til footer*/
+  .ikoner {
+    display: flex;
+    padding-top: 10px;
+    padding-bottom: -40px;
+  }
+
+  /* fjern web footer*/
+  .row{
+    display: none;
+  }
+
+  .footer{
+    background-color: #f8f4f1;
+    font-family: franklin-gothic-urw;
+    font-size: 20px;
+    text-align: center;
+    color: black;
   }
 }
+
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -296,10 +284,55 @@ hr.solid {
   header .btn {
     font-size: 25px;
   }
+  /* sociale medie ikoner til footer*/
+  .ikoner {
+    display: flex;
+  }
+
+  /* fjern web footer*/
+  .row{
+    display: none;
+  }
+
+  .br{
+    margin: 0px;
+  }
+
+  .footer{
+    background-color: #f8f4f1;
+    font-family: franklin-gothic-urw;
+    font-size: 20px;
+    text-align: center;
+    color: black;
+  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  /* sociale medie ikoner til footer*/
+    .ikoner {
+      display: flex;
+      padding-top: 10px;
+      padding-bottom: -40px;
+    }
+    /* kolonner til footer på computer */
+    .row{
+      display: flex;
+      width: 100%;
+     }
+    .column {
+      display: center;
+      width: 50%;
+      background-color: #f8f4f1;
+      font-family: franklin-gothic-urw;
+      font-size: 20px;
+      text-align: center;
+      color: black;
+      }
+    /* fjern visning af den mobile footer*/
+    .footer{
+      display: none;
+    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
