--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,7 @@ html {
 body {
   background-image: var(--baggrund);
   background-size:100% auto;
-  background-color: var(--beige);
+  background-color: var(--white);
   font-family: var(--font);
 }
 
@@ -86,6 +86,7 @@ img {
 header {
   position: relative;
   width: 100%;
+  max-width: 400px; /* MOBIL */
   background: var(--offwhite);
   padding-bottom: 5%;
 }
@@ -94,11 +95,14 @@ header img {
 }
 header .btn {
   position: absolute;
+  top: 40%; /* MOBIL */
+  left: 50%; /* MOBIL */
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: var(--green);
   color: var(--white);
   font-family: var(--overskrift);
+  font-size: 18px; /* MOBIL */
   padding: 12px 35px;
   padding-top: 16px;
   border: none;
@@ -108,6 +112,7 @@ header .btn {
 }
 header h2 {
   position: absolute;
+  top: 20%; /* MOBIL */
   text-align: center;
   font-family: var(--brødtekst);
   color: var(--black);
@@ -164,18 +169,24 @@ hr.solid {
 /* shop tekst*/
 .shop h4 {
   position: absolute;
+  top: 231%; /* MOBIL */
+  left: 37%; /* MOBIL */
 }
 .shop p {
   position: absolute;
+  top: 235%; /* MOBIL */
 }
 /*shop knap*/
 .btn2 {
   position: absolute;
+  top: 248%; /* MOBIL */
+  left: 50%; /* MOBIL */
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   background-color: var(--green);
   color: var(--white);
   font-family: var(--overskrift);
+  font-size: 18px; /* MOBIL */
   padding: 12px 52px;
   padding-top: 16px;
   border: none;
@@ -213,7 +224,7 @@ hr.solid {
   width: 23%;
 }
 
-/* Extra small devices (phones, 600px and down) - Iphone X */
+/* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
   /* Typography */
   h1 {
@@ -239,41 +250,10 @@ hr.solid {
     top: 20%;
   }
   /* inspiration galleri */
-  /* shop tekst*/
-  .shop h4 {
-    top: 231%;
-    left: 37%;
-  }
-  .shop p {
-    top: 235%;
-  }
-  /*shop knap*/
-  .btn2 {
-    top: 248%;
-    left: 50%;
-    font-size: 18px;
-  }
-  /* sociale medie ikoner til footer*/
-  .ikoner {
-    display: flex;
-    padding-top: 10px;
-    padding-bottom: -40px;
-  }
-
-  /* fjern web footer*/
-  .row{
-    display: none;
-  }
-
-  .footer{
-    background-color: #f8f4f1;
-    font-family: franklin-gothic-urw;
-    font-size: 20px;
-    text-align: center;
-    color: black;
+  .inspirationgalleri img{
+    width: 45%;
   }
 }
-
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
@@ -284,55 +264,10 @@ hr.solid {
   header .btn {
     font-size: 25px;
   }
-  /* sociale medie ikoner til footer*/
-  .ikoner {
-    display: flex;
-  }
-
-  /* fjern web footer*/
-  .row{
-    display: none;
-  }
-
-  .br{
-    margin: 0px;
-  }
-
-  .footer{
-    background-color: #f8f4f1;
-    font-family: franklin-gothic-urw;
-    font-size: 20px;
-    text-align: center;
-    color: black;
-  }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
-  /* sociale medie ikoner til footer*/
-    .ikoner {
-      display: flex;
-      padding-top: 10px;
-      padding-bottom: -40px;
-    }
-    /* kolonner til footer på computer */
-    .row{
-      display: flex;
-      width: 100%;
-     }
-    .column {
-      display: center;
-      width: 50%;
-      background-color: #f8f4f1;
-      font-family: franklin-gothic-urw;
-      font-size: 20px;
-      text-align: center;
-      color: black;
-      }
-    /* fjern visning af den mobile footer*/
-    .footer{
-      display: none;
-    }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
