--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,6 @@ img {
 header {
   position: relative;
   width: 100%;
-  max-width: 400px; /* MOBIL */
   background: var(--offwhite);
   padding-bottom: 5%;
 }
@@ -110,18 +109,11 @@ header .btn {
   border-radius: 60px;
   text-align: center;
 }
-header h2 {
-  position: absolute;
-  top: 20%; /* MOBIL */
-  text-align: center;
-  font-family: var(--brødtekst);
-  color: var(--black);
-}
 
 /* FORSIDE - kategorier */
 #kategorier {
   padding-top: 25px;
-  /*display: flex;
+  /* display: flex;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center; */
@@ -230,19 +222,22 @@ hr.solid {
   h1 {
     font-size: 1.4em;
     text-align: center;
-    max-width: 15ch;
+    padding-left: 50px;
+    padding-right: 50px;
   }
   p {
     font-size: 1.4em;
     text-align: center;
+    padding-left: 20px;
+    padding-right: 20px;
   }
 
   /* FORSIDE - header */
-  header {
-    max-width: 600px;
+  .headercom {
+    display: none;
   }
   header .btn {
-    top: 40%;
+    top: 30%;
     left: 50%;
     font-size: 18px;
   }
@@ -253,27 +248,59 @@ hr.solid {
   .inspirationgalleri img{
     width: 45%;
   }
+  /* Shop */
+  .shopcom {
+    display: none;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   /* FORSIDE - header */
-  header {
-    max-width: 767px;
+  .header {
+    display: none;
   }
   header .btn {
     font-size: 25px;
+  }
+  /* Shop */
+  .shopbillede {
+    display: none;
   }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
+  /* FORSIDE - header */
+  .header {
+    display: none;
+  }
+  /* Shop */
+  .shopbillede {
+    display: none;
+  }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
+  /* FORSIDE - header */
+  .header {
+    display: none;
+  }
+  /* Shop */
+  .shopbillede {
+    display: none;
+  }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
+  /* FORSIDE - header */
+  .header {
+    display: none;
+  }
+  /* Shop */
+  .shopbillede {
+    display: none;
+  }
 }
