--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,9 @@ h1, h2, h3 {
   color: var(--black);
   margin-top: var(--whitespace);
   margin-bottom: var(--whitespace);
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
 }
 h4 {
   font-family: var(--overskrift);
@@ -75,11 +78,82 @@ p {
   color: var(--black);
   margin-top: var(--whitespace);
   margin-bottom: var(--whitespace);
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
 }
 
 /* Billeder */
 img {
   width: 100%;
+}
+
+/* MENUBAR */
+#navigation {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    height: 80px;
+    width: 100%;
+    background-color: var(--offwhite);
+    color: var(--black);
+}
+
+/* Dropdown Button - https://www.w3schools.com/howto/howto_css_dropdown.asp */
+.dropbtn {
+  color: var(--black);
+  background-color:var(--offwhite);
+  padding-bottom: 16px;
+  padding-top: 16px;
+  font-family: var(--brødtekst);
+  font-size: 130%;
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--offwhite);
+  min-width: 160px;
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: var(--black);
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  font-family: var(--brødtekst);
+  font-size: 130%;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {
+  background-color: var(--green);
+  color: var(--white);
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+  background-color: var(--offwhite)
+}
+
+.dropbtn:hover {
+  color: var(--green);
+  cursor: pointer;
 }
 
 /* FORSIDE - header */
@@ -109,11 +183,22 @@ header .btn {
   border-radius: 60px;
   text-align: center;
 }
+header h2 {
+  position: absolute;
+  top: 15%; /* MOBIL */
+  font-family: var(--brødtekst);
+  color: var(--black);
+  margin-top: var(--whitespace);
+  margin-bottom: var(--whitespace);
+  padding-left: 60px;
+  padding-right: 60px;
+  text-align: center;
+}
 
 /* FORSIDE - kategorier */
 #kategorier {
   padding-top: 25px;
-  /* display: flex;
+  display: flex;
   flex-wrap: wrap;
   gap: 10px;
   justify-content: center; */
@@ -129,21 +214,25 @@ div.boks {
 }
 div.behandlinger {
   background-image: var(--behandlinger);
-  background-size:100% auto;
+  background-size: cover;
+  background-repeat: no-repeat;
+/*  background-size:100% auto; */
   height: 300px;
   padding-top: 0.5%;
   margin-top: 25px;
 }
 div.academy {
   background-image: var(--academy);
-  background-size:100% auto;
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 300px;
   padding-top: 0.5%;
   margin-top: 25px;
 }
 div.omos {
   background-image: var(--omos);
-  background-size:100% auto;
+  background-size: cover;
+  background-repeat: no-repeat;
   height: 300px;
   padding-top: 0.5%;
   margin-top: 25px;
@@ -171,7 +260,7 @@ hr.solid {
 /*shop knap*/
 .btn2 {
   position: absolute;
-  top: 248%; /* MOBIL */
+  top: 240%; /* MOBIL */
   left: 50%; /* MOBIL */
   transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
@@ -231,6 +320,26 @@ hr.solid {
     padding-left: 20px;
     padding-right: 20px;
   }
+  /* navbar burgermenu ved lille skærm */
+  .burgermenu{
+    position: absolute;
+    top: 1.5rem;
+    right: 1.5rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+
+  .burgermenu .bar{
+    height: 3px;
+    width: 100%;
+    background-color: var(--black);
+    border-radius: 10px;
+  }
+
+  .dropdown{
+    display: none;
+  }
 
   /* FORSIDE - header */
   .headercom {
@@ -240,9 +349,6 @@ hr.solid {
     top: 30%;
     left: 50%;
     font-size: 18px;
-  }
-  header h2 {
-    top: 20%;
   }
   /* inspiration galleri */
   .inspirationgalleri img{
@@ -256,11 +362,17 @@ hr.solid {
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
+  /* navbar burgermenu */
+    .burgermenu{
+      display:none;
+    }
+
   /* FORSIDE - header */
   .header {
     display: none;
   }
   header .btn {
+    top: 35%;
     font-size: 25px;
   }
   /* Shop */
