--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ header h2 {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
-  justify-content: center; */
+  justify-content: center;
 }
 
 /* NY Boks med tekst ovenpå billede */
