--- a/css/style.css
+++ b/css/style.css
@@ -365,10 +365,52 @@ hr.solid {
   margin-top: 20px;
 }
 
-.row{
-  display: none;
+/* FOOTER */
+#copyright {
+  font-size: 15px;
+  text-align: center;
 }
 
+.copyright {
+  background-color: var(--white);
+  padding: 1em;
+}
+
+/* footer link - book nu*/
+.footer a {
+  text-decoration: none;
+  color: var(--green);
+  font-family: var(--brødtekst);
+}
+.column a {
+  text-decoration: none;
+  color: var(--green);
+  font-family: var(--brødtekst);
+}
+.footer a:hover{
+  color: var(--black);
+}
+.column a:hover {
+  color: var(--black);
+}
+
+/* sociale medie ikoner til footer*/
+.ikoner {
+display: flex;
+padding-top: 10px;
+justify-content: center;
+margin-left: auto;
+margin-right: auto;
+background-color: var(--offwhite);
+}
+
+.footer{
+background-color: #f8f4f1;
+font-family: var(--brødtekst);
+font-size: 20px;
+text-align: center;
+color: black;
+}
 
 
 /* Extra small devices (phones, 600px and down) */
@@ -442,6 +484,12 @@ hr.solid {
   .item p{
     font-size: 17px;
   }
+
+  /* FOOTER */
+  /* fjern web footer*/
+  .row{
+  display: none;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
@@ -492,6 +540,11 @@ hr.solid {
   .container{
     width: 70%;
   }
+  /* FOOTER */
+ /* fjern web footer*/
+ .row{
+   display: none;
+ }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
@@ -531,6 +584,26 @@ hr.solid {
   .item p{
     font-size: 18px;
   }
+
+  /* FOOTER */
+ /* kolonner til footer på computer */
+     .row{
+       display: flex;
+       width: 100%;
+     }
+     .column {
+       width: 50%;
+       background-color: #f8f4f1;
+       font-family: var(--brødtekst);
+       font-size: 15px;
+       text-align: center;
+       color: black;
+     }
+
+ /* fjern visning af den mobile footer*/
+     .footer{
+       display: none;
+     }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
@@ -570,6 +643,26 @@ hr.solid {
   .item p{
     font-size: 18px;
   }
+
+  /* FOOTER */
+ /* kolonner til footer på computer */
+     .row{
+       display: flex;
+       width: 100%;
+     }
+     .column {
+       width: 50%;
+       background-color: #f8f4f1;
+       font-family: var(--brødtekst);
+       font-size: 20px;
+       text-align: center;
+       color: black;
+     }
+
+ /* fjern visning af den mobile footer*/
+     .footer{
+       display: none;
+     }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
