--- a/css/style.css
+++ b/css/style.css
@@ -365,6 +365,16 @@ hr.solid {
   margin-top: 20px;
 }
 
+/* !! UNDERSIDE - OM OS !! */
+/* Om os - Typography */
+.parkering {
+  padding-bottom: 10%;
+}
+
+.omosunderside {
+  padding-top: 2em;
+}
+
 /* FOOTER */
 #copyright {
   font-size: 15px;
@@ -485,6 +495,36 @@ color: black;
     font-size: 17px;
   }
 
+  /* !! UNDERSIDE - OM OS !! */
+  /* Om os - Typography */
+  .omosh1 {
+    font-size: 1.4em;
+    text-align: center;
+  }
+  .omosoverskrifter {
+    font-size: 2em;
+    text-align: center;
+  }
+  .infop {
+    font-size: 1.4em;
+    text-align: center;
+    margin: 1.5em;
+  }
+
+  /* opstilling af Susu og Katrins info på om os*/
+    .omosbilleder {
+      width: 80%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .omosp {
+      margin-bottom: 10%;
+      margin: 1.5em;
+      font-size: 1.4em;
+      text-align: center;
+    }
+
   /* FOOTER */
   /* fjern web footer*/
   .row{
@@ -531,15 +571,44 @@ color: black;
     margin-left: auto;
     margin-right: auto;
   }
-
   .item p{
     font-size: 17px;
   }
-
   /* UNDERSIDE - Booking - bokse med behandlinger */
   .container{
     width: 70%;
   }
+
+  /* !! UNDERSIDE - OM OS !! */
+  /* Om os - Typography */
+  .omosh1 {
+    font-size: 1.4em;
+    text-align: center;
+  }
+  .omosoverskrifter {
+    font-size: 2em;
+    text-align: center;
+  }
+  .infop {
+    font-size: 1.4em;
+    text-align: center;
+    margin: 1.5em;
+  }
+
+  /* opstilling af Susu og Katrins info på om os*/
+    .omosbilleder {
+      width: 80%;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    .omosp {
+      margin-bottom: 10%;
+      margin: 1.5em;
+      font-size: 1.4em;
+      text-align: center;
+    }
   /* FOOTER */
  /* fjern web footer*/
  .row{
@@ -584,6 +653,48 @@ color: black;
   .item p{
     font-size: 18px;
   }
+
+  /* !! UNDERSIDE - OM OS !! */
+  /* Om os - Typography */
+  .omosh1 {
+    text-align: inherit;
+    font-size: 1.9em;
+    margin-left: 2em;
+    margin-top: 2.6em;
+  }
+  .omosoverskrifter {
+    font-size: 2em;
+    text-align: center;
+  }
+  .infop {
+    text-align: center;
+    font-size: 1.3em;
+    margin-bottom: 10px;
+    margin-left: 17%;
+    margin-right: 17%;
+  }
+  .omosp {
+    text-align: inherit;
+    font-size: 1.3em;
+    margin-left: 3em;
+  }
+
+  /* opstilling af Susu og Katrins info på om os*/
+    .omosbilleder {
+      width: 400px;
+      display: inline;
+    }
+    .kasse {
+      background-color: var(--offwhite);
+      text-align: inherit;
+      margin-bottom: 30px;
+      margin-top: 30px;
+      flex-direction: row-reverse;
+      display: inline-flex;
+    }
+    .kassebillede {
+      margin: 10px;
+    }
 
   /* FOOTER */
  /* kolonner til footer på computer */
@@ -634,7 +745,6 @@ color: black;
     margin-left: auto;
     margin-right: auto;
   }
-
   /* UNDERSIDE - Booking - bokse med behandlinger */
   .container{
     width: 70%;
@@ -644,6 +754,49 @@ color: black;
     font-size: 18px;
   }
 
+  /* !! UNDERSIDE - OM OS !! */
+  /* Om os - Typography */
+  .omosh1 {
+    text-align: inherit;
+    font-size: 2.2em;
+    margin-left: 3em;
+    margin-top: 2em;
+  }
+  .omosoverskrifter {
+    font-size: 2em;
+    text-align: center;
+  }
+  .infop {
+    text-align: center;
+    font-size: 1.3em;
+    margin-bottom: 10px;
+    margin-left: 12em;
+    margin-right: 12em;
+  }
+  .omosp {
+    text-align: inherit;
+    font-size: 1.6em;
+    margin-left: 4.2em;
+  }
+
+  /* opstilling af Susu og Katrins info på om os*/
+    .omosbilleder {
+      width: 400px;
+      display: inline;
+    }
+    .kasse {
+      background-color: var(--offwhite);
+      text-align: inherit;
+      margin-bottom: 30px;
+      margin-top: 30px;
+      flex-direction: row-reverse;
+      display: inline-flex;
+    }
+    .kassebillede {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-right: 3em;
+    }
   /* FOOTER */
  /* kolonner til footer på computer */
      .row{
@@ -684,4 +837,69 @@ color: black;
   .container{
     width: 65%;
   }
+
+  /* !! UNDERSIDE - OM OS !! */
+  /* Om os - Typography */
+  .omosh1 {
+    text-align: inherit;
+    font-size: 2em;
+    margin-left: 5.5em;
+    margin-top: 3em;
+  }
+  .omosoverskrifter {
+    font-size: 2em;
+    text-align: center;
+  }
+  .infop {
+    text-align: center;
+    font-size: 1.2em;
+    margin-bottom: 10px;
+    margin-left: 12em;
+    margin-right: 12em;
+  }
+  .omosp {
+    text-align: inherit;
+    font-size: 1.4em;
+    margin-left: 8em;
+    margin-right: 8em;
+  }
+
+  /* opstilling af Susu og Katrins info på om os*/
+    .omosbilleder {
+      width: 400px;
+      display: inline;
+    }
+    .kasse {
+      background-color: var(--offwhite);
+      text-align: inherit;
+      margin-bottom: 30px;
+      margin-top: 30px;
+      flex-direction: row-reverse;
+      display: inline-flex;
+    }
+    .kassebillede {
+      margin-top: 10px;
+      margin-bottom: 10px;
+      margin-right: 3em;
+    }
+
+    /* FOOTER */
+   /* kolonner til footer på computer */
+       .row{
+         display: flex;
+         width: 100%;
+       }
+       .column {
+         width: 50%;
+         background-color: #f8f4f1;
+         font-family: var(--brødtekst);
+         font-size: 20px;
+         text-align: center;
+         color: black;
+       }
+
+   /* fjern visning af den mobile footer*/
+       .footer{
+         display: none;
+       }
 }
